@@ -5,3 +5,4 @@
 /Project_Planning
 /node_modules
 /public/proj_Images
+/public/proj_images
