@@ -115,12 +115,7 @@ div{
       </div>
 
 
-      <div class="page-title">
-          <h1>About My Equipment</h1>
 
-
-
-      </div>
 
 
       </div>
